--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@ p {
 }
 
 
-#container {
-  position: relative;
-  
-}
+
 
 #p1 {
   background-color: #D59898;
@@ -218,7 +215,7 @@ p {
 <body>
 <h1>Our Menu</h1>
 <div class="row">
-  <div class="col-lg-4 col-md-6 col-xs-12" id="container">
+  <div class="col-lg-4 col-md-6 col-xs-12" >
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   	<p id="p1">Chicken</p>
 
@@ -226,13 +223,13 @@ p {
 
   
 
-  <div class="col-lg-4 col-md-6 col-xs-12" id="container"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <div class="col-lg-4 col-md-6 col-xs-12" "><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
   	<p id="p2">Beef</p>
 
   </div>
 
-  <div class="col-lg-4 col-md-12 col-xs-12" id="container"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <div class="col-lg-4 col-md-12 col-xs-12" "><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
   	<p id="p3">Sushi</p>
 
